--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Indie Flower">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lemon">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quicksand">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Puzzly</title>
